* Dialer: add new function MultiplexServer::vaciarBuferesEscritura() to flush 
  all output buffers.
* Dialer: modify packet processing algorithm to prioritize the Asterisk AMI 
  connection over other connections.
* Dialer: flush output buffers after every packet processing to ensure events 
  are delivered as soon as possible.
* Dialer: add cache for output of 'agent show' and 'queue show' commands. These 
  commands are expensive to execute and greatly slow down the 'getagentstatus' 
  ECCP procedure. The current cache lifetime is 1.5 seconds.
* Dialer: add utility function Predictivo::leerEstadoAgente() that will make use
  of the output cache if possible.
* Dialer: add trimmed down function Predictivo::obtenerCanalRemotoAgente() that
  only runs 'agent show' instead of building the entire queue report, just to 
  discard almost all of it.
* Dialer (ECCP): new ECCP diagnostic script getagentstatusloop.php
* Agent Console: fix typo that caused web console to refresh the agent status
  twice on agent link.
* Dialer: discard AMI events for which there are no handlers upon reception. Also
  put a microsecond timestamp for benchmarking.
* Dialer (ECCP): on hangup request, check clientchannel present instead of status
  for reporting that agent is not in call. 
* Agent Console: reorder code so that ECCP call to 'getcampaigninfo' happens at
  most once in status check.
* Dialer (ECCP): work around https://bugs.php.net/bug.php?id=41175 which throws
  a warning on an attempt to set a XML attribute to an empty string. Triggered
  by a form with an empty description. 
* Dialer (ECCP): remove bogus copy-paste leftover in form information fetching.
* Dialer: at hangup, the check for scheduled calls requires access to campaign
  data, but the campaign may already have ended, so it might not be in the
  campaign array. Read campaign data from database if required.
* Dialer (ECCP): fix access to possibly-undefined property 'ActualChannel' when